# cutesseract2

./: .gitignore  CMakeLists.txt  README.md
cu_tesseract/: Makefile
cu_tesseract/include/: dtypes.cuh  kernels.cuh  matrix.cuh  matrix.hpp  types.cuh  utils.cuh
cu_tesseract/src/: kernels.cu  main.cpp  main.cu  matrix.cpp  matrix.cu
tests/: CMakeLists.txt  test_class_matrix.cu  test_main.cu
